--- a/app/src/main/res/layout/reproductor.xml
+++ b/app/src/main/res/layout/reproductor.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.example.isabel.Reproductor">
+
 
     <FrameLayout
 
@@ -11,26 +15,25 @@
         android:layout_marginTop="200dp">
 
 
-    <ImageButton
-        android:id="@+id/Start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/play"/>
+        <ImageButton
+            android:id="@+id/Start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/play" />
 
         <ImageButton
             android:id="@+id/Pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="120dp"
-            android:src="@drawable/pause"/>
+            android:src="@drawable/pause" />
 
         <ImageButton
             android:id="@+id/Stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="240dp"
-            android:src="@drawable/stop"/>
-
+            android:src="@drawable/stop" />
 
 
     </FrameLayout>
