--- a/app/src/main/res/layout/text_view_lista_archivos.xml
+++ b/app/src/main/res/layout/text_view_lista_archivos.xml
@@ -2,5 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:gravity="center_vertical"/>
+    android:gravity="center_vertical"
+    android:layout_marginTop="10dp"/>
 
