--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,10 +19,11 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/Carpetavacia"
+            android:layout_marginTop="25dp"
             />
 
         <ListView
-            android:id="@android:id/list"
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"/>
